--- a/ms-formation.properties
+++ b/ms-formation.properties
@@ -13,5 +13,5 @@ eureka.client.service-url.defaultZone=http://localhost:8888/eureka
 logging.level.com.esi.msformation.proxy.EtudiantProxy=DEBUG
 spring.cloud.openfeign.client.config.default.logger-level=FULL
 
-mes-config-email=ilias@gmail.com
+mes-config-email=iliasSoltani@gmail.com
 mes-config.compte=213165468476513
